# helix-gateway

./: .env.example  Cargo.toml  README.md  build.rs
benches/: gateway_benchmark.rs
proto/: gateway.proto
src/: client.rs  config.rs  error.rs  format.rs  lib.rs  utils.rs
src/db/: mod.rs  router.rs
src/gateway/: buffer.rs  embeddings.rs  introspection.rs  mcp.rs  mod.rs  queries.rs  routes.rs  state.rs
src/tests/: db_integration_test.rs  integration_test.rs  mod.rs
tests/: db_integration_test.rs  integration_test.rs
