[package]
name = "helix-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
mimalloc = "0.1.48"
serde = { version = "1.0.228", features = ["derive"] }
sonic-rs = "0.5.6"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"
tower-http = { version = "0.6.8", features = ["trace", "timeout"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6.12"

tonic = "0.14.2"
prost = "0.14"
tonic-prost = "*"

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"


[profile.release]
opt-level = 2
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.dev]
opt-level = 0
codegen-units = 256
lto = false
panic = "abort"
incremental = true
debug = 1
