[package]
name = "helix-gateway"
version = "0.1.0"
edition = "2024"
description = "Gateway library for handling requests between gateway service and db"
license = "MIT"
authors = ["HelixDB <founders@helix-db.com>"]

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
sonic-rs = "0.5.6"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "macros", "signal"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"
tower-http = { version = "0.6.8", features = ["trace", "timeout"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6.12"

# proto
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "0.14.2"
prost-types = "0.14.1"
pbjson-types = "0.9.0"
pbjson = "0.9.0"

#db
inventory = { version = "0.3.16", optional = true }
futures = { version = "0.3.31", optional = true }

#gateway
reqwest = { version = "0.13.1", features = [
    "json",
    "blocking",
], optional = true}

#embeddings
rig-core = { version = "0.27", features = ["derive"] }
url = "2.5.8"
tokio-util = { version = "0.7.18", features = ["compat"] }
core_affinity = "0.8.3"
async-trait = "0.1.88"
sha2 = "0.10.9"
subtle = "2.6.1"



[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"
pbjson-build = "0.9.0"

[profile.release]
opt-level = 2
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio-stream = "0.1"

[profile.dev]
opt-level = 0
codegen-units = 256
lto = false
panic = "abort"
incremental = true
debug = 1

[features]
default = ["gateway", "db"]
gateway = ["reqwest"]
db = ["inventory", "futures"]
